--- a/index.html
+++ b/index.html
@@ -114,6 +114,96 @@
                 </div>
             </div>
         </div>
+        <div class="phone-ad sec">
+            <div class="content">
+                <div class="mobile-img">
+                    <img src="images/mobile.png" alt="">
+                </div>
+                <div class="text">
+                    <h2>OUR DESIGN COMES WITH...</h2>
+                    <p><i class="fa-solid fa-tv"></i>Responsive Design</p>
+                    <p><i class="fa-solid fa-tv"></i>Modern And Clean Design</p>
+                    <p><i class="fa-solid fa-tv"></i>Clean Code</p>
+                    <p><i class="fa-solid fa-tv"></i>Browser Friendly</p>
+                </div>
+            </div>
+        </div>
+        <div id="portfolio">
+            <div class="container">
+                <div class="address-info sec">
+                    <h2>PORTFOLIO</h2>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                </div>
+            </div>
+            <div class="images-sec">
+                <div class="links">
+                    <ul>
+                        <li><a href="">All</a></li>
+                        <li><a href="">App</a></li>
+                        <li><a href="">Photo</a></li>
+                        <li><a href="">Web</a></li>
+                        <li><a href="">Print</a></li>
+                    </ul>
+                </div>
+                <div class="images">
+                    <div class="img">
+                        <img src="images/shuffle-01.jpg" alt="">
+                        <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                    <div class="img">
+                        <img src="images/shuffle-02.jpg" alt="">
+                            <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                    <div class="img">
+                        <img src="images/shuffle-03.jpg" alt="">
+                            <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                    <div class="img">
+                        <img src="images/shuffle-04.jpg" alt="">
+                            <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                    <div class="img">
+                        <img src="images/shuffle-05.jpg" alt="">
+                            <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                    <div class="img">
+                        <img src="images/shuffle-06.jpg" alt="">
+                            <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                    <div class="img">
+                        <img src="images/shuffle-07.jpg" alt="">
+                            <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                    <div class="img">
+                        <img src="images/shuffle-08.jpg" alt="">
+                            <p>Awesome Image<br/><span>Photography</span></p>
+                    </div>
+                </div>
+                <div class="more-btn">
+                    <button>MORE</button>
+                </div>
+            </div>
+            <div class="video-sec">
+                <video src="videos/dron.mp4" muted autoplay loop></video>
+                <div class="vid-text">
+                    <h2>SUPER AWESOME VIDEO HERE</h2>
+                    <p>Its All You Need</p>
+                    <button>SEE MORE</button>
+                </div>
+            </div>
+        </div>
+        <div id="about" class="sec">
+            <div class="container">
+                <div class="sec-one">
+                    <div class="address-info">
+                        <h2>ABOUT US</h2>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                    </div>
+                    <div class="about-img">
+                        <img src="images/about.png" alt="">
+                    </div>
+                </div>
+            </div>
     </section>
 </body>
 </html>
