--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                         <h2>ABOUT US</h2>
                         <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
                     </div>
-                    <div class="about-img">
+                    <!-- <div class="about-img">
                         <img src="images/about.png" alt="">
-                    </div>
+                    </div> -->
                 </div>
             </div>
     </section>
