--- a/index.html
+++ b/index.html
@@ -303,21 +303,139 @@
                 </div>
             </div>
         </div>
-        <div id="pricing" class="sec">
-            <div class="container">
+        <div id="pricing">
+            <div class="container sec">
                 <div class="address-info">
                     <h2>PRICING</h2>
                     <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
                 </div>
                 <div class="plans">
-                    <div></div>
+                    <div class="plan">
+                        <div>
+                            <h3>BASIC</h3>
+                            <p><sup>$</sup> 19 <sub>/Mo</sub></p>
+                        </div>
+                        <div>
+                            <p>Feature No 1</p>
+                            <p>Extra Feature</p>
+                            <p>Extra Feature No 2</p>
+                            <p>Feature</p>
+                        </div>
+                        <div>
+                            <button>Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="plan">
+                        <div>
+                            <h3>PREMIUM</h3>
+                            <p><sup>$</sup> 29 <sub>/Mo</sub></p>
+                        </div>
+                        <div>
+                            <p>Feature No 1</p>
+                            <p>Extra Feature</p>
+                            <p>Extra Feature No 2</p>
+                            <p>Feature</p>
+                        </div>
+                        <div>
+                            <button>Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="plan">
+                        <div>
+                            <h3>PRO</h3>
+                            <p><sup>$</sup> 39 <sub>/Mo</sub></p>
+                        </div>
+                        <div>
+                            <p>Feature No 1</p>
+                            <p>Extra Feature</p>
+                            <p>Extra Feature No 2</p>
+                            <p>Feature</p>
+                        </div>
+                        <div>
+                            <button>Buy Now</button>
+                        </div>
+                    </div>
+                    <div class="plan">
+                        <div>
+                            <h3>PLATINUM</h3>
+                            <p><sup>$</sup> 49 <sub>/Mo</sub></p>
+                        </div>
+                        <div>
+                            <p>Feature No 1</p>
+                            <p>Extra Feature</p>
+                            <p>Extra Feature No 2</p>
+                            <p>Feature</p>
+                        </div>
+                        <div>
+                            <button>Buy Now</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="contact-info">
                     <p>Contact us if you have special request</p>
                     <button>Contact Us</button>
                 </div>
             </div>
+            <div class="subscribe sec">
+                <div class="container">
+                    <div class="subscribe-info">
+                        <div class="search-input">
+                            <input type="search" placeholder="Your Email">
+                        </div>
+                        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blan dit aliquet elit, eget tincidunt.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="contact" class="sec">
+            <div class="container">
+                <div class="address-info">
+                    <h2>CONTACT US</h2>
+                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+                </div>
+                <div class="contact-us-info">
+                    <div class="message">
+                        <form action="">
+                            <input type="text" placeholder="Your Name">
+                            <input type="email" placeholder="Your Email">
+                            <textarea placeholder="Your Message"></textarea>
+                            <input type="submit" value="SEND MESSAGE">
+                        </form>
+                    </div>
+                    <div class="our-address">
+                        <div class="phone">
+                            <h4>GET IN TOUCH</h4>
+                            <p>+00 123.456.789</p>
+                            <p>+00 123.456.789</p>
+                        </div>
+                        <div class="address">
+                            <h4>WHERE WE ARE</h4>
+                            <p>Awesome Address 17<br/>New York, NYC<br/>123-4567-890<br/>USA</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-img">
+            <div class="container">
+                <div class="footer-content">
+                    <img src="images/logo.png" alt="">
+                    <div>
+                        <p>WE ARE SOCIAL</p>
+                        <span></span>
+                        <div class="icons">
+                            <i class="fa-brands fa-facebook-f"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-youtube"></i>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </div>
+                    </div>
+                    <p>&copy; 2021 <span>Kasper</span> All Right Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
